--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,3 +69,9 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+
+/* Additional styles */
+.rowStyle {
+  border: solid black 1px;
+}
